--- a/src/ChatHeader.css
+++ b/src/ChatHeader.css
@@ -15,6 +15,7 @@
 .chatHeader__left > h3 {
   display: flex;
   align-items: center;
+  color: white;
 }
 
 .chatHeader__right {
@@ -30,7 +31,7 @@
 }
 
 .chatHeader__right > .MuiSvgIcon-root:hover {
-  color: red;
+  color: white;
 }
 
 .chatHeader__search {
